feat: update share string with project GitHub page

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -173,7 +173,7 @@
     <string name="flag_game_over_share_button">Share score</string>
     <string name="flag_game_over_play_again_button">Replay</string>
     <string name="flag_game_over_share_subject">Flag game score</string>
-    <string name="flag_game_over_share_text">I just guessed %d/%d flags in the \"Flags\" app game on the \"%s\" game mode.\n\nDownload the app *here* and see if you can beat me…</string>
+    <string name="flag_game_over_share_text">I just guessed %d/%d flags in the \"Flags\" app game on the \"%s\" game mode.\n\nDownload the app from https://github.com/aftly/Flags and see if you can beat me…</string>
     <string name="flag_list_title">View</string>
     <string name="flag_list_description">Display lists of flags by category</string>
     <string name="flag_search_title">Search</string>
