Capitalize category menu titles

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,11 +1,11 @@
 <resources>
     <string name="app_name">Flags</string>
-    <string name="button_title_flags">\ flags</string>
-    <string name="button_title_state_flags">\ state flags</string>
+    <string name="button_title_flags">\ Flags</string>
+    <string name="button_title_state_flags">\ State Flags</string>
     <string name="category_super_all">All</string>
     <string name="category_super_sovereign_country">Country (sovereign)</string>
-    <string name="category_super_sovereign_country_title">Country flags (sovereign)</string>
-    <string name="category_super_autonomous_region">Autonomous or associated region</string>
+    <string name="category_super_sovereign_country_title">Country Flags</string>
+    <string name="category_super_autonomous_region">Autonomous or Associated Region</string>
     <string name="category_super_regional">Regional</string>
     <string name="category_super_international">International</string>
     <string name="category_super_cultural">Cultural</string>
@@ -14,27 +14,27 @@
     <string name="category_super_cultural_in_description_also">flag also represents a</string>
     <string name="category_super_cultural_in_description_historical_also">flag also represented a</string>
     <string name="category_super_historical">Historical</string>
-    <string name="category_super_political">Political categories (sovereign):</string>
-    <string name="category_sub_territorial_power_distribution">Territorial distribution of power:</string>
-    <string name="category_sub_executive_structure">Executive structure and accountability:</string>
-    <string name="category_sub_legal_constraint">Legal constraint on leaders:</string>
-    <string name="category_sub_power_derivation">Power derivation:</string>
-    <string name="category_sub_regime_type">Political regime:</string>
-    <string name="category_sub_ideological_orientation">Ideological orientation:</string>
-    <string name="category_non_administrative_political">Non-administrative:</string>
-    <string name="category_sovereign_state_title">Sovereign state</string>
+    <string name="category_super_political">Political Categories (countries):</string>
+    <string name="category_sub_territorial_power_distribution">Territorial Distribution of Power:</string>
+    <string name="category_sub_executive_structure">Executive Structure and Accountability:</string>
+    <string name="category_sub_legal_constraint">Legal Constraint on Leaders:</string>
+    <string name="category_sub_power_derivation">Power Derivation:</string>
+    <string name="category_sub_regime_type">Political Regime:</string>
+    <string name="category_sub_ideological_orientation">Ideological Orientation:</string>
+    <string name="category_non_administrative_political">Non-Administrative:</string>
+    <string name="category_sovereign_state_title">Sovereign State</string>
     <string name="category_sovereign_state_string">sovereign state</string>
     <string name="category_sovereign_state_in_description">(sovereign)</string>
-    <string name="category_free_association_title">Free association</string>
+    <string name="category_free_association_title">Free Association</string>
     <string name="category_free_association_string">free association</string>
     <string name="category_free_association_in_description">in free association with</string>
-    <string name="category_autonomous_region_title">Autonomous region</string>
+    <string name="category_autonomous_region_title">Autonomous Region</string>
     <string name="category_autonomous_region_string">autonomous region</string>
     <string name="category_autonomous_region_in_description_an">n autonomous</string>
-    <string name="category_devolved_government_title">Devolved government</string>
+    <string name="category_devolved_government_title">Devolved Government</string>
     <string name="category_devolved_government_string">devolved government</string>
     <string name="category_devolved_government_in_description">with a devolved government</string>
-    <string name="category_indigenous_territory_title">Indigenous territory</string>
+    <string name="category_indigenous_territory_title">Indigenous Territory</string>
     <string name="category_indigenous_territory_string">indigenous territory</string>
     <string name="category_canton_title">Canton</string>
     <string name="category_canton_string">canton</string>
@@ -42,7 +42,7 @@
     <string name="category_collectivity_string">collectivity</string>
     <string name="category_community_title">Community</string>
     <string name="category_community_string">community</string>
-    <string name="category_country_title">Constituent country</string>
+    <string name="category_country_title">Constituent Country</string>
     <string name="category_country_string">(constituent) country</string>
     <string name="category_county_title">County</string>
     <string name="category_county_string">county</string>
@@ -60,7 +60,7 @@
     <string name="category_island_string">island</string>
     <string name="category_krai_title">Krai</string>
     <string name="category_krai_string">krai</string>
-    <string name="category_member_state_title">Member state</string>
+    <string name="category_member_state_title">Member State</string>
     <string name="category_member_state_string">member state</string>
     <string name="category_municipality_title">Municipality</string>
     <string name="category_municipality_string">municipality</string>
@@ -79,9 +79,9 @@
     <string name="category_state_string">state</string>
     <string name="category_territory_title">Territory</string>
     <string name="category_territory_string">territory</string>
-    <string name="category_supranational_union_title">Supranational union</string>
+    <string name="category_supranational_union_title">Supranational Union</string>
     <string name="category_supranational_union_string">supranational union</string>
-    <string name="category_international_organization_title">International organization</string>
+    <string name="category_international_organization_title">International Organization</string>
     <string name="category_international_organization_string">international organization</string>
     <string name="category_international_organization_in_description">n international organization</string>
     <string name="category_historical_title">Historical</string>
@@ -96,30 +96,30 @@
     <string name="category_directorial_string">directorial</string>
     <string name="category_parliamentary_title">Parliamentary</string>
     <string name="category_parliamentary_string">parliamentary</string>
-    <string name="category_semi_presidential_title">Semi-presidential</string>
+    <string name="category_semi_presidential_title">Semi-Presidential</string>
     <string name="category_semi_presidential_string">semi-presidential</string>
-    <string name="category_dual_executive_title">Dual-executive</string>
+    <string name="category_dual_executive_title">Dual-Executive</string>
     <string name="category_dual_executive_string">dual-executive</string>
     <string name="category_presidential_title">Presidential</string>
     <string name="category_presidential_string">presidential</string>
     <string name="category_constitutional_title">Constitutional</string>
     <string name="category_constitutional_string">constitutional</string>
-    <string name="category_nominal_extra_constitutional_title">Nominal or extra constitutional</string>
+    <string name="category_nominal_extra_constitutional_title">Nominal or Extra Constitutional</string>
     <string name="category_nominal_extra_constitutional_string">nominal or extra constitutional</string>
     <string name="category_nominal_extra_constitutional_in_description">(nominally)</string>
     <string name="category_republic_title">Republic</string>
     <string name="category_republic_string">republic</string>
     <string name="category_monarchy_title">Monarchy</string>
     <string name="category_monarchy_string">monarchy</string>
-    <string name="category_one_party_title">One-party</string>
+    <string name="category_one_party_title">One-Party</string>
     <string name="category_one_party_string">one-party</string>
     <string name="category_one_party_in_description">state under a one-party system</string>
     <string name="category_theocracy_title">Theocracy</string>
     <string name="category_theocracy_string">theocracy</string>
-    <string name="category_military_junta_title">Military junta</string>
+    <string name="category_military_junta_title">Military Junta</string>
     <string name="category_military_junta_string">military junta</string>
     <string name="category_military_junta_in_description">system under a military junta</string>
-    <string name="category_provisional_government_title">Provisional government</string>
+    <string name="category_provisional_government_title">Provisional Government</string>
     <string name="category_provisional_government_string">provisional government</string>
     <string name="category_provisional_government_in_description">system under a provisional government</string>
     <string name="category_democracy_title">Democracy</string>
