Implement dynamically sized left spacer in Filter menu button titles so that title can be truly centered when there is available space, and taking the space of the spacer when it needs to

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -14,14 +14,14 @@
     <string name="category_super_cultural_in_description_also">flag also represents a</string>
     <string name="category_super_cultural_in_description_historical_also">flag also represented a</string>
     <string name="category_super_historical">Historical</string>
-    <string name="category_super_political">Political Categories (countries):</string>
-    <string name="category_sub_territorial_power_distribution">Territorial Distribution of Power:</string>
-    <string name="category_sub_executive_structure">Executive Structure and Accountability:</string>
-    <string name="category_sub_legal_constraint">Legal Constraint on Leaders:</string>
-    <string name="category_sub_power_derivation">Power Derivation:</string>
-    <string name="category_sub_regime_type">Political Regime:</string>
-    <string name="category_sub_ideological_orientation">Ideological Orientation:</string>
-    <string name="category_non_administrative_political">Non-Administrative:</string>
+    <string name="category_super_political">Political Categories (countries)</string>
+    <string name="category_sub_territorial_power_distribution">Territorial Distribution of Power</string>
+    <string name="category_sub_executive_structure">Executive Structure and Accountability</string>
+    <string name="category_sub_legal_constraint">Legal Constraint on Leaders</string>
+    <string name="category_sub_power_derivation">Power Derivation</string>
+    <string name="category_sub_regime_type">Political Regime</string>
+    <string name="category_sub_ideological_orientation">Ideological Orientation</string>
+    <string name="category_non_administrative_political">Non-Administrative</string>
     <string name="category_sovereign_state_title">Sovereign State</string>
     <string name="category_sovereign_state_string">sovereign state</string>
     <string name="category_free_association_title">Free Association</string>
