--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -172,10 +172,8 @@
     <string name="flag_game_over_share_subject">Flag game score</string>
     <string name="flag_game_over_share_text">I just guessed %d/%d flags in the \"Flags\" app game on the \"%s\" game mode.\n\nDownload the app from https://github.com/aftly/Flags and see if you can beat me…</string>
     <string name="flag_list_title">View</string>
-    <string name="flag_list_description">Display lists of flags by category</string>
-    <string name="flag_search_title">Search</string>
-    <string name="flag_search_description">Find a flag by it\'s names and politically related flags (eg. \"United Kingdom\" or \"Britain\")</string>
-    <string name="flag_search_bar_placeholder">Search all flags</string>
+    <string name="flag_list_description">Display lists of flags by category,\nor it\'s names (eg. \"United Kingdom\" or \"Britain\")</string>
+    <string name="flag_search_bar_placeholder">Search flags</string>
     <string name="flag_search_clear">Clear search</string>
     <string name="flag_search_no_results_title">No flags found</string>
     <string name="flag_search_no_results_description">Queries will match common &amp; official names</string>
