Add 'Show answer' button to Game

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -157,34 +157,39 @@
     <string name="error">Error</string>
     <string name="flag">flag</string>
     <string name="flags">flags</string>
-    <string name="flag_game_title">Game</string>
-    <string name="flag_game_description">Guess names of flags from their pictures</string>
-    <string name="flag_game_guess_field_label">Your guess</string>
-    <string name="flag_game_guess_field_label_error">Incorrect</string>
-    <string name="flag_game_guess_field_label_success">Correct!</string>
-    <string name="flag_game_over_title">Game finished</string>
-    <string name="flag_game_over_text">Flags guessed: %d/%d</string>
-    <string name="flag_game_over_text_max_score">You guessed every flag…\nNerd!</string>
-    <string name="flag_game_over_text_min_score">A dunce cap is coming your way</string>
-    <string name="flag_game_over_exit_button">Leave</string>
-    <string name="flag_game_over_share_button">Share score</string>
-    <string name="flag_game_over_play_again_button">Replay</string>
-    <string name="flag_game_over_share_subject">Flag game score</string>
-    <string name="flag_game_over_share_text">I just guessed %d/%d flags in the \"Flags\" app game on the \"%s\" game mode.\n\nDownload the app from https://github.com/aftly/Flags and see if you can beat me…</string>
-    <string name="flag_list_title">View</string>
-    <string name="flag_list_description">Display lists of flags by category,\nor it\'s names (eg. \"United Kingdom\" or \"Britain\")</string>
-    <string name="flag_search_bar_placeholder">Search flags</string>
-    <string name="flag_search_clear">Clear search</string>
-    <string name="flag_search_no_results_title">No flags found</string>
-    <string name="flag_search_no_results_description">Queries will match common &amp; official names</string>
-    <string name="flag_search_no_results_description_2">(Matches are special character agnostic)</string>
-    <string name="list_flags_no_results_description">Try selecting less or different categories</string>
+    <string name="game_title">Game</string>
+    <string name="game_description">Guess names of flags from their pictures</string>
+    <string name="game_button_submit">Submit</string>
+    <string name="game_button_skip">Skip</string>
+    <string name="game_button_show">Show answer</string>
+    <string name="game_button_show_confirm">Are you sure?</string>
+    <string name="game_button_shown">Answer shown</string>
+    <string name="game_guess_field_label">Your guess</string>
+    <string name="game_guess_field_label_error">Incorrect</string>
+    <string name="game_guess_field_label_success">Correct!</string>
+    <string name="game_over_title">Game finished</string>
+    <string name="game_over_text">Flags guessed: %d/%d</string>
+    <string name="game_over_text_max_score">You guessed every flag…\nNerd!</string>
+    <string name="game_over_text_min_score">A dunce cap is coming your way</string>
+    <string name="game_over_exit_button">Leave</string>
+    <string name="game_over_share_button">Share score</string>
+    <string name="game_over_play_again_button">Replay</string>
+    <string name="game_over_share_subject">Flag game score</string>
+    <string name="game_over_share_text">I just guessed %d/%d flags in the \"Flags\" app game on the \"%s\" game mode.\n\nDownload the app from https://github.com/aftly/Flags and see if you can beat me…</string>
+    <string name="list_title">View</string>
+    <string name="list_description">Display lists of flags by category,\nor it\'s names (eg. \"United Kingdom\" or \"Britain\")</string>
     <string name="menu_related_flags">Related Flags</string>
     <string name="menu_multiple_selection">Multiple Categories Selected</string>
     <string name="menu_icon_expand">expand menu</string>
     <string name="menu_icon_collapse">collapse menu</string>
     <string name="menu_sub_icon_expand">expand sub-menu</string>
     <string name="menu_sub_icon_collapse">collapse sub-menu</string>
+    <string name="multi_select_no_results_description">Try selecting less or different categories</string>
+    <string name="search_bar_placeholder">Search flags</string>
+    <string name="search_clear">Clear search</string>
+    <string name="search_no_results_title">No flags found</string>
+    <string name="search_no_results_description">Queries will match common &amp; official names</string>
+    <string name="search_no_results_description_2">(Matches are special character agnostic)</string>
     <string name="settings_title">"Settings"</string>
     <string name="start_menu_title">"Flags of the World"</string>
     <string name="string_a">a</string>
