Start work on score details dialog from game over dialog

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -171,11 +171,16 @@
     <string name="game_over_text">Flags guessed: %d/%d</string>
     <string name="game_over_text_max_score">You guessed every flag…\nNerd!</string>
     <string name="game_over_text_min_score">A dunce cap is coming your way</string>
-    <string name="game_over_exit_button">Leave</string>
+    <string name="game_over_details_button">Details</string>
     <string name="game_over_share_button">Share score</string>
     <string name="game_over_play_again_button">Replay</string>
     <string name="game_over_share_subject">Flag game score</string>
     <string name="game_over_share_text">I just guessed %d/%d flags in the \"Flags\" app game on the \"%s\" game mode.\n\nDownload the app from https://github.com/aftly/Flags and see if you can beat me…</string>
+    <string name="game_score_details_title">Score details</string>
+    <string name="game_score_details_guessed">Flags guessed (%d)</string>
+    <string name="game_score_details_skipped">Flags skipped (%d)</string>
+    <string name="game_score_details_shown">Flags shown (%d)</string>
+    <string name="game_score_details_remainder">Remaining flags (%d)</string>
     <string name="list_title">View</string>
     <string name="list_description">Display lists of flags by category,\nor it\'s names (eg. \"United Kingdom\" or \"Britain\")</string>
     <string name="menu_related_flags">Related Flags</string>
