--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -191,6 +191,10 @@
     <string name="game_score_details_skipped">Flags skipped (%d)</string>
     <string name="game_score_details_shown">Flags shown (%d)</string>
     <string name="game_score_details_remainder">Remaining flags (%d)</string>
+    <string name="game_time_trial_title">Time trial</string>
+    <string name="game_time_trial_input_placeholder">00</string>
+    <string name="game_time_trial_minute">m</string>
+    <string name="game_time_trial_second">s</string>
     <string name="list_title">View</string>
     <string name="list_description">Display lists of flags by category,\nor it\'s names (eg. \"United Kingdom\" or \"Britain\")</string>
     <string name="menu_related_flags">Related Flags</string>
