Show answer button state resets after interactions with submit, skip and keyboard action button. Also show answer button 'Are you sure?' state resets after 5 seconds with countdown indicator.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -162,7 +162,7 @@
     <string name="game_button_submit">Submit</string>
     <string name="game_button_skip">Skip</string>
     <string name="game_button_show">Show answer</string>
-    <string name="game_button_show_confirm">Are you sure?</string>
+    <string name="game_button_show_confirm">Are you sure? (%d)</string>
     <string name="game_button_shown">Answer shown</string>
     <string name="game_guess_field_label">Your guess</string>
     <string name="game_guess_field_label_error">Incorrect</string>
