--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -208,7 +208,9 @@
     <string name="search_no_results_title">No flags found</string>
     <string name="search_no_results_description">Queries will match common &amp; official names</string>
     <string name="search_no_results_description_2">(Matches are special character agnostic)</string>
-    <string name="settings_title">"Settings"</string>
+    <string name="settings_title">Settings</string>
+    <string name="settings_colors">Colors</string>
+    <string name="settings_about">About</string>
     <string name="start_menu_title">"Flags of the World"</string>
     <string name="string_a">a</string>
     <string name="string_and">and</string>
