--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -153,6 +153,8 @@
     <string name="category_religious_in_description">religious entity</string>
     <string name="category_regional_title">Geographical Region</string>
     <string name="category_regional_string">geographical region</string>
+    <string name="dialog_ok">OK</string>
+    <string name="dialog_cancel">Cancel</string>
     <string name="end_game">Finish game</string>
     <string name="error">Error</string>
     <string name="flag">flag</string>
@@ -210,6 +212,10 @@
     <string name="search_no_results_description_2">(Matches are special character agnostic)</string>
     <string name="settings_title">Settings</string>
     <string name="settings_colors">Colors</string>
+    <string name="settings_theme">Theme</string>
+    <string name="settings_theme_system">System</string>
+    <string name="settings_theme_light">Light</string>
+    <string name="settings_theme_dark">Dark</string>
     <string name="settings_about">About</string>
     <string name="start_menu_title">"Flags of the World"</string>
     <string name="string_a">a</string>
