Exclude dynamic colors setting when device's Android version below 12

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -212,6 +212,8 @@
     <string name="search_no_results_description_2">(Matches are special character agnostic)</string>
     <string name="settings_title">Settings</string>
     <string name="settings_colors">Colors</string>
+    <string name="settings_dynamic_colors_title">Dynamic color / Material You</string>
+    <string name="settings_dynamic_colors_description">Use colors from system palette on Android 12+</string>
     <string name="settings_theme">Theme</string>
     <string name="settings_theme_system">System</string>
     <string name="settings_theme_light">Light</string>
