--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -218,6 +218,7 @@
     <string name="settings_theme_system">System</string>
     <string name="settings_theme_light">Light</string>
     <string name="settings_theme_dark">Dark</string>
+    <string name="settings_theme_black">Black</string>
     <string name="settings_about">About</string>
     <string name="settings_about_source_code_title">Source code</string>
     <string name="settings_about_source_code_description">View the app\'s source code on GitHub</string>
