Add 'System (Black)' theme mode to theme settings. Also increase spacing between options in dialog

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -216,6 +216,7 @@
     <string name="settings_dynamic_colors_description">Use colors from system palette on Android 12+</string>
     <string name="settings_theme">Theme</string>
     <string name="settings_theme_system">System</string>
+    <string name="settings_theme_system_black">System (Black)</string>
     <string name="settings_theme_light">Light</string>
     <string name="settings_theme_dark">Dark</string>
     <string name="settings_theme_black">Black</string>
