--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,8 +4,10 @@
     <string name="button_title_state_flags">\ State Flags</string>
     <string name="category_super_all">All</string>
     <string name="category_super_sovereign_country">Country (sovereign)</string>
+    <string name="category_super_sovereign_country_game_category">Countries</string>
     <string name="category_super_sovereign_country_title">Country Flags</string>
     <string name="category_super_autonomous_region">Autonomous or Associated Region</string>
+    <string name="category_super_autonomous_region_game_category">Autonomous Regions</string>
     <string name="category_super_regional">Regional</string>
     <string name="category_super_international">International</string>
     <string name="category_super_cultural">Cultural</string>
@@ -183,10 +185,8 @@
     <string name="game_score_details_correct_title">Correct answers:</string>
     <string name="game_score_details_correct_absolute">%d/%d</string>
     <string name="game_score_details_correct_relative">%.2f</string>
-    <string name="game_score_details_time_mode_title">Time mode:</string>
-    <string name="game_score_details_time_mode_1">Standard</string>
-    <string name="game_score_details_time_mode_2">Time trial</string>
-    <string name="game_score_details_time_mode_details">%dm, %02ds</string>
+    <string name="game_score_details_time_mode">Time mode:</string>
+    <string name="game_score_details_time">%dm, %02ds</string>
     <string name="game_score_details_guessed">Flags guessed (%d)</string>
     <string name="game_score_details_skipped">Flags skipped (%d)</string>
     <string name="game_score_details_shown">Flags shown (%d)</string>
@@ -197,6 +197,7 @@
     <string name="game_time_trial_second">s</string>
     <string name="game_history_title">Score History</string>
     <string name="game_history_score">%d/%d</string>
+    <string name="game_history_category_multiple">Multiple</string>
     <string name="list_title">View</string>
     <string name="list_description">Display lists of flags by category,\nor it\'s names (eg. \"United Kingdom\" or \"Britain\")</string>
     <string name="menu_related_flags">Related Flags</string>
@@ -245,6 +246,8 @@
     <string name="string_whitespace">\ </string>
     <string name="string_with_a">with a</string>
     <string name="string_within">within</string>
+    <string name="time_mode_standard">Standard</string>
+    <string name="time_mode_time_trial">Time Trial</string>
     <string name="wikipedia_button">Open in Wikipedia</string>
     <string name="wikipedia_site_prefix">https://en.wikipedia.org/wiki/</string>
     <string name="abkhazia">Abkhazia</string>
