When selecting multiple categories, pause game start until user collapses the categories menu

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,13 +3,16 @@
     <string name="button_title_flags">\ Flags</string>
     <string name="button_title_state_flags">\ State Flags</string>
     <string name="category_super_all">All</string>
+    <string name="category_super_all_detailed">All flags</string>
     <string name="category_super_sovereign_country">Country (sovereign)</string>
-    <string name="category_super_sovereign_country_game_category">Countries</string>
+    <string name="category_super_sovereign_country_game_category_preview">Country</string>
+    <string name="category_super_sovereign_country_game_category_detailed">Sovereign Country</string>
     <string name="category_super_sovereign_country_title">Country Flags</string>
     <string name="category_super_autonomous_region">Autonomous or Associated Region</string>
-    <string name="category_super_autonomous_region_game_category">Autonomous Regions</string>
+    <string name="category_super_autonomous_region_game_category_preview">Autonomous Region</string>
     <string name="category_super_regional">Regional</string>
     <string name="category_super_international">International</string>
+    <string name="category_super_international_detailed">International Organization</string>
     <string name="category_super_cultural">Cultural</string>
     <string name="category_super_cultural_in_description">flag represents a</string>
     <string name="category_super_cultural_in_description_historical">flag represented a</string>
@@ -157,7 +160,6 @@
     <string name="category_regional_string">geographical region</string>
     <string name="dialog_ok">OK</string>
     <string name="dialog_cancel">Cancel</string>
-    <string name="end_game">Finish game</string>
     <string name="error">Error</string>
     <string name="flag">flag</string>
     <string name="flags">flags</string>
@@ -168,6 +170,7 @@
     <string name="game_button_show">Show answer</string>
     <string name="game_button_show_confirm">Are you sure? (%d)</string>
     <string name="game_button_shown">Answer shown</string>
+    <string name="game_end">End game</string>
     <string name="game_guess_field_label">Your guess</string>
     <string name="game_guess_field_label_error">Incorrect</string>
     <string name="game_guess_field_label_success">Correct!</string>
@@ -182,11 +185,13 @@
     <string name="game_over_replay_button">Replay</string>
     <string name="game_over_share_subject">Flag game score</string>
     <string name="game_over_share_text">I just guessed %d/%d flags in the \"Flags\" app game on the \"%s\" game mode.\n\nDownload the app from https://github.com/aftly/Flags and see if you can beat me…</string>
+    <string name="game_paused">Game paused</string>
     <string name="game_score_details_title">Score details</string>
     <string name="game_score_details_overview">Overview</string>
     <string name="game_score_details_correct_title">Correct answers:</string>
     <string name="game_score_details_correct_absolute">%d/%d</string>
     <string name="game_score_details_correct_relative">%.2f</string>
+    <string name="game_score_details_categories_title">Categories:</string>
     <string name="game_score_details_time_mode">Time mode:</string>
     <string name="game_score_details_time">%dm, %02ds</string>
     <string name="game_score_details_guessed">Flags guessed (%d)</string>
